# bluejay7

./: .gitignore  README.md  mavros_install.sh  ubuntu_sim_ros.sh
.catkin_tools/profiles/default/: devel_collisions.txt
old shell scripts/: ubuntu_sim_ros.sh
src/bluejay_actionlibs/: CMakeLists.txt  package.xml
src/bluejay_actionlibs/include/bluejay_actionlibs/: circle_server.h  landing_server.h  move_server.h  navigate_server.h  takeoff_server.h
src/bluejay_actionlibs/launch/: action.launch
src/bluejay_actionlibs/resource/actions/navigation/: TakeOff.action
src/bluejay_actionlibs/src/: TakeoffClient.cpp  circle_server.cpp  hovering.cpp.autosave  landing_server.cpp  move.cpp.autosave  move_server.cpp  navigate_server.cpp  takeoff_server.cpp
src/bluejay_comm/: CMakeLists.txt  package.xml
src/bluejay_control/: CMakeLists.txt  package.xml
src/bluejay_control/include/bluejay_control/: offb_controller_node.h
src/bluejay_control/launch/: control.launch
src/bluejay_control/resource/: Control.cfg
src/bluejay_control/src/: offb_controller_node.cpp  offb_controller_node.h
src/bluejay_description/: CMakeLists.txt  package.xml
src/bluejay_description/config/: urdf.rviz
src/bluejay_description/launch/: urdf.launch
src/bluejay_description/meshes/Hex/: model.dae
src/bluejay_description/meshes/Hexacopter/: model.dae
src/bluejay_description/meshes/Propeller/: model.dae
src/bluejay_description/urdf/: hexa.urdf  object.urdf
src/bluejay_gazebo/: CMakeLists.txt
src/bluejay_gazebo/launch/: bluejay_gazebo.launch
src/bluejay_gazebo/models/BJ6_1/: BJ6_1.sdf.jinja  model.config
src/bluejay_gazebo/models/rplidar/: model.sdf
src/bluejay_gazebo/resource/: bluejay.rviz  bluejay_rviz.rviz  mansveld.rviz  px4_config.yaml
src/bluejay_gazebo/worlds/: hitl_BJ6_1.world
src/bluejay_gazebo/worlds/maps/: willow_full.yaml
src/bluejay_launch/: CMakeLists.txt
src/bluejay_launch/launch/: bluejay_px4.launch  bluejay_sitl.launch
src/bluejay_msgs/: CMakeLists.txt  package.xml
src/bluejay_msgs/action/: Circle.action  Landing.action  Move.action  Navigate.action  TakeOff.action
src/bluejay_msgs/actions/navigation/: Landing.action  Navigate.action
src/bluejay_navigation/: CMakeLists.txt  package.xml
src/bluejay_navigation/include/bluejay_navigation/: navigation_server.h
src/bluejay_navigation/launch/: navigation.launch
src/bluejay_navigation/resource/: example.yaml  local_costmap_params.yaml  move_base_params.yaml
src/bluejay_navigation/src/: navigation_server.cpp
src/bluejay_pathplanner/: CMakeLists.txt  package.xml
src/bluejay_pathplanner/include/bluejay_pathplanner/: astar.h  globalplanner.h  pathfinding.h  rrts.h
src/bluejay_pathplanner/launch/: movebase.launch  slam.launch
src/bluejay_pathplanner/resource/: base_local_planner_params.yaml  move_base_params.yaml
src/bluejay_pathplanner/src/: globalplanner.cpp
src/bluejay_slam/: CMakeLists.txt  package.xml
src/bluejay_slam/include/: astar.h  rttt.h
src/bluejay_slam/launch/: costmap_2d.launch
src/bluejay_slam/resource/: base_local_planner_params.yaml  costmap_common_params.yaml  example.yaml  global_costmap_params.yaml  local_costmap_params.yaml  move_base_params.yaml
src/bluejay_slam/src/: test_fake_pose.cpp  test_fake_pose.cpp.save  test_fake_pose.h
src/bluejay_taskManager/: CMakeLists.txt  package.xml
src/bluejay_taskmanager/: CMakeLists.txt  package.xml
src/bluejay_taskmanager/include/bluejay_taskmanager/: actionclient.h  circleclient.h  fakeclient.h  landingclient.h  moveclient.h  takeoffclient.h  task.h  taskmanager.h  taskmanager_node.h  taskmanager_node.h.autosave  threadpool.h
src/bluejay_taskmanager/launch/: taskmanager.launch
src/bluejay_taskmanager/src/: circleclient.cpp  fakeclient.cpp  landingclient.cpp  moveclient.cpp  takeoffclient.cpp  task.cpp  taskmanager.cpp  taskmanager.h  taskmanager_node.cpp
src/bluejay_vision/: CMakeLists.txt  package.xml
src/bluejay_vision/include/bluejay_vision/: vision.h
src/bluejay_vision/launch/: vision.launch
src/bluejay_vision/src/: vision.cpp
src/bluejay_vision_python/: CMakeLists.txt  package.xml
src/bluejay_vision_python/launch/: vision.launch
src/bluejay_vision_python/src/: vision.py
